--- a/yes.html
+++ b/yes.html
@@ -26,7 +26,7 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Hehehehe, I knew it! 😘<br> Happy Girlfriend's Day Bubuuuu❤️💫<br> I Love uh too Bubuuu❤️❤️😘</h1>
+      <h1>Hehehehe, I knew it! 😘<br> Happy Girlfriend's Day Bubuuuu❤️💫<br> Love uh soo much Bubu❤️❤️😘</h1>
     </div>
   </body>
 </html>
